adjusted img pre4view size to true 16:9 format deactivated the inputs autocomplete to prevent inputs background clipping

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -119,6 +119,7 @@ form{
         color: white;
         font-family: Karla;
         font-size: 18px;
+        caret-color: white;
         &::placeholder{
             font-family: Karla;
             font-size: 18px;
