--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -105,8 +105,8 @@ section{
     .img-preview, .img-preview-bg{
         visibility: hidden;
         position: absolute;
-        width: 295px;
-        height: 192px;
+        width: 304px;
+        height: 171px;
         border-radius: 16px;
         transition: 0.2s ease-in-out;
         opacity: 0;
